# coven-github

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  COVEN-GITHUB.md  Cargo.toml  DESIGN.md  Dockerfile  FAMILIAR-CONTRACT.md  HOSTED.md  LICENSE  README.md  RELEASE.md  ROADMAP.md  compose.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
config/: example.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/gardener/: Cargo.toml
crates/gardener/src/: lib.rs  report.rs  scan.rs  schedule.rs
crates/github/: Cargo.toml
crates/github/src/: check_run.rs  installation.rs  lib.rs  pr.rs  repo.rs  tasks.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/webhook/: Cargo.toml
crates/webhook/src/: commands.rs  events.rs  lib.rs  routes.rs
crates/webhook/tests/: parse_fixtures.rs
crates/webhook/tests/fixtures/: issue_assigned.json  issue_comment_created.json  issue_comment_on_pr.json  issue_labeled.json  ping.json  pull_request_opened.json  pull_request_ready_for_review.json  pull_request_review_comment_created.json  pull_request_review_submitted.json  pull_request_synchronize.json  push_branch_deleted.json  push_default_branch.json  push_feature_branch.json
crates/worker/: Cargo.toml
crates/worker/src/: backend.rs  brief.rs  findings.rs  gardener_exec.rs  gardener_schedule.rs  lib.rs  memory.rs  redact.rs  status_comment.rs
crates/worker/tests/: contract.rs
deploy/complete-tech/: README.md  coven_github_adapter.py
deploy/coven-github/: README.md  coven_github_adapter.py  test_coven_github_adapter.py
deploy/hosted/: .env.example  Caddyfile  compose.yaml  litestream.yml  provision.sh
docs/: app-manifest.json  architecture.md  backlog-dag.md  branch-gardener.md  container-isolation.md  data-retention.md  demo.md  durable-task-store.md  headless-contract.md  hosted-deploy.md  hosted-mvp-plan.md  hosted-vs-self-hosted.md  marketplace-listing.md  memory-contract.md  pricing.md  security.md  self-hosting.md
docs/contracts/: result.example.json  result.schema.json  session-brief.example.json  session-brief.schema.json
docs/output/: OpenCoven-GitHub-App-Setup-Guide.docx
examples/demo/: fake-coven-code  github-stub.py  run-demo.sh
examples/familiar-github-starter/: README.md  config.toml
probe/: covencat-live.mjs
scripts/: smoke-webhook.sh
