[package]
name = "coven-github"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "coven-github"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
coven-github-api = { path = "../github" }
coven-github-config = { path = "../config" }
coven-github-store = { path = "../store" }
coven-github-webhook = { path = "../webhook" }
coven-github-worker = { path = "../worker" }
