[package]
name = "coven-github-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
coven-github-api = { path = "../github" }

[dev-dependencies]
uuid.workspace = true
