[package]
name = "coven-github-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
hmac.workspace = true
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
coven-github-api = { path = "../github" }
coven-github-config = { path = "../config" }
coven-github-store = { path = "../store" }
