[package]
name = "coven-github-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
coven-github-api = { path = "../github" }
coven-github-config = { path = "../config" }
coven-github-store = { path = "../store" }

[dev-dependencies]
wiremock.workspace = true
